--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Contact</title></head><body><h2>Contact Us</h2></body></html>
+<!DOCTYPE html><html><head><title>Contact</title></head><body><h1>Contact the PRO</h1></body></html>
