--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<!DOCTYPE html><html><head><title>Finance Point</title></head><body><h1>Welcome to Finance Point</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Finance Point | AAUA Finance Dept.</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="assets/logo.png" />
+</head>
+<body class="home">
+  <header class="topbar">
+    <div class="logo">
+      <img src="assets/logo.png" alt="Finance Point Logo" />
+      <h1>Finance Point</h1>
+    </div>
+    <nav class="navbar">
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="dashboard.html">Dashboard</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="downloads.html">Downloads</a></li>
+        <li><a href="executives.html">Executives</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="email-login.html" class="btn login-btn">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Welcome to Finance Point</h2>
+      <p>Your Official Hub for the Department of Finance, AAUA</p>
+      <a href="email-login.html" class="btn">Get Started</a>
+    </div>
+  </section>
+  <section class="features">
+    <div class="feature"><h3>Daily Updates</h3><p>Stay up to date with events, news, and resources for Finance students.</p></div>
+    <div class="feature"><h3>Downloads</h3><p>Access past questions, handouts, and recommended materials easily.</p></div>
+    <div class="feature"><h3>Executive Corner</h3><p>Meet your departmental executives and connect directly with the PRO.</p></div>
+  </section>
+  <section class="contact-short">
+    <h3>Need Help? Contact the PRO</h3>
+    <p>Call or message on WhatsApp: <a href="tel:+2348142452729">08142452729</a></p>
+    <a href="https://wa.me/2348142452729" class="btn contact-btn">Chat on WhatsApp</a>
+  </section>
+  <footer class="footer">
+    <p>&copy; 2025 Finance Point - Department of Finance, AAUA</p>
+    <p>Created by OBA</p>
+  </footer>
+</body>
+</html>
