--- a/news.html
+++ b/news.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>News</title></head><body><h2>Latest News</h2></body></html>
+<!DOCTYPE html><html><head><title>News</title></head><body><h1>News - Coming Soon</h1></body></html>
