--- a/events.html
+++ b/events.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Events</title></head><body><h2>Coming Soon</h2></body></html>
+<!DOCTYPE html><html><head><title>Events</title></head><body><h1>Events - Coming Soon</h1></body></html>
