--- a/executives.html
+++ b/executives.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Meet the Executives</title></head><body><h2>Our Executives</h2></body></html>
+<!DOCTYPE html><html><head><title>Executives</title></head><body><h1>Meet Your Executives</h1></body></html>
