--- a/signup.html
+++ b/signup.html
@@ -69,7 +69,7 @@
         if (error) {
           alert(error.message);
         } else {
-          alert("✅ Sign-up successful! Please check your email to confirm.");
+          alert("✅ Sign-up successful! Check your email to confirm.");
         }
       });
     });
