--- a/dashboard.html
+++ b/dashboard.html
@@ -44,13 +44,17 @@
     }
   </style>
   <script type="module">
-    import { supabase } from './supabase.js';
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+
+    const supabase = createClient(
+      "https://edunetx.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRkbGFmbWFycnl0aXhqZ2Vma2hzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE3NzM3OTksImV4cCI6MjA2NzM0OTc5OX0.baDfihnD_fstSU7MkdAIiVSQKmTbrX3HvSuRKZs5bIA"
+    );
 
     async function checkAuth() {
       const { data: { user } } = await supabase.auth.getUser();
 
       if (!user) {
-        // Not logged in, redirect to login
         window.location.href = "login.html";
       } else {
         document.getElementById("userEmail").textContent = user.email;
