--- a/login.html
+++ b/login.html
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <title>Login | Finance Point</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -44,13 +44,24 @@
     a { color: #fff; text-decoration: underline; }
   </style>
   <script type="module">
-    import { supabase } from './supabase.js';
+    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
+
+    const supabase = createClient(
+      "https://edunetx.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRkbGFmbWFycnl0aXhqZ2Vma2hzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE3NzM3OTksImV4cCI6MjA2NzM0OTc5OX0.baDfihnD_fstSU7MkdAIiVSQKmTbrX3HvSuRKZs5bIA"
+    );
+
     document.addEventListener("DOMContentLoaded", () => {
       document.getElementById("loginForm").addEventListener("submit", async (e) => {
         e.preventDefault();
         const email = document.getElementById("email").value;
         const password = document.getElementById("password").value;
-        const { error } = await supabase.auth.signInWithPassword({ email, password });
+
+        const { error } = await supabase.auth.signInWithPassword({
+          email,
+          password
+        });
+
         if (error) {
           alert(error.message);
         } else {
