--- a/index.html
+++ b/index.html
@@ -1,89 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sign Up | Finance Point</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Finance Point | AAUA</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, #2b5876, #4e4376);
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
-    .container {
-      background-color: #ffffff20;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 10px #00000040;
-      width: 90%;
-      max-width: 360px;
-      text-align: center;
-    }
-    input, button {
-      width: 100%;
-      padding: 10px;
-      margin: 0.5rem 0;
-      border: none;
-      border-radius: 0.5rem;
-      font-size: 1rem;
-    }
-    input {
-      background: #ffffffcc;
-      color: #000;
-    }
-    button {
-      background: #00c9a7;
+
+    body {
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+                  url('https://images.unsplash.com/photo-1565379933853-53d2ff3c731b?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
       color: #fff;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      background: rgba(255, 255, 255, 0.05);
+      padding: 30px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
+      max-width: 700px;
+    }
+
+    h1 {
+      font-family: 'Merriweather', serif;
+      font-size: 2.5rem;
+      margin-bottom: 15px;
+      color: #ffd700;
+    }
+
+    p {
+      font-size: 1.1rem;
+      margin-bottom: 25px;
+      line-height: 1.6;
+    }
+
+    .btn {
+      background: #ffd700;
+      color: #000;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 30px;
       font-weight: 600;
       cursor: pointer;
+      transition: 0.3s ease;
+      text-decoration: none;
     }
-    a {
-      color: #fff;
-      text-decoration: underline;
+
+    .btn:hover {
+      background: #fff;
+      color: #000;
+    }
+
+    footer {
+      margin-top: 30px;
+      font-size: 0.9rem;
+      color: #ccc;
     }
   </style>
-  <script type="module">
-    import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
-
-    const supabase = createClient(
-      "https://edunetx.supabase.co",
-      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRkbGFmbWFycnl0aXhqZ2Vma2hzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE3NzM3OTksImV4cCI6MjA2NzM0OTc5OX0.baDfihnD_fstSU7MkdAIiVSQKmTbrX3HvSuRKZs5bIA"
-    );
-
-    document.addEventListener("DOMContentLoaded", () => {
-      document.getElementById("signupForm").addEventListener("submit", async (e) => {
-        e.preventDefault();
-        const email = document.getElementById("email").value;
-        const password = document.getElementById("password").value;
-
-        const { error } = await supabase.auth.signUp({
-          email,
-          password
-        });
-
-        if (error) {
-          alert(error.message);
-        } else {
-          alert("✅ Sign-up successful! Please check your email to confirm.");
-        }
-      });
-    });
-  </script>
 </head>
 <body>
   <div class="container">
-    <h2>Sign Up</h2>
-    <form id="signupForm">
-      <input type="email" id="email" placeholder="Email" required />
-      <input type="password" id="password" placeholder="Password" required />
-      <button type="submit">Sign Up</button>
-    </form>
-    <p>Already have an account? <a href="login.html">Login</a></p>
+    <h1>Finance Point - AAUA</h1>
+    <p>Welcome to the official website for all AAUA Finance students. Stay connected with updates, downloads, and events from your departmental PRO - <strong>OBA</strong>.</p>
+    <a href="dashboard.html" class="btn">Go to Dashboard</a>
+    <footer>
+      Created by OBA • Public Relations Officer • Finance Dept.
+    </footer>
   </div>
 </body>
 </html>
