--- a/dashboard.html
+++ b/dashboard.html
@@ -4,13 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Finance Point Dashboard</title>
-
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
-  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
   <style>
     * {
       box-sizing: border-box;
@@ -18,24 +13,21 @@
       padding: 0;
       font-family: 'Poppins', sans-serif;
     }
-
     body {
       display: flex;
       min-height: 100vh;
       background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
       color: #fff;
     }
-
     .sidebar {
       width: 220px;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0, 0, 0, 0.85);
       color: #fff;
       padding: 20px 10px;
       position: fixed;
       height: 100vh;
       overflow-y: auto;
     }
-
     .sidebar h2 {
       font-family: 'Merriweather', serif;
       font-size: 22px;
@@ -43,7 +35,6 @@
       margin-bottom: 30px;
       color: #ffd700;
     }
-
     .sidebar a {
       display: block;
       color: #ccc;
@@ -53,20 +44,17 @@
       border-radius: 5px;
       transition: 0.3s;
     }
-
     .sidebar a:hover {
       background: #ffd700;
       color: #000;
     }
-
     .main {
       margin-left: 220px;
       flex: 1;
       padding: 20px;
     }
-
     .topbar {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.08);
       padding: 15px 20px;
       border-radius: 10px;
       margin-bottom: 20px;
@@ -75,13 +63,11 @@
       justify-content: space-between;
       align-items: center;
     }
-
     .topbar h1 {
       font-size: 20px;
       color: #ffd700;
       font-weight: 600;
     }
-
     .section {
       background: rgba(255, 255, 255, 0.05);
       padding: 20px;
@@ -89,36 +75,30 @@
       backdrop-filter: blur(6px);
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     }
-
     .section h2 {
       font-size: 18px;
       margin-bottom: 10px;
       font-weight: 600;
     }
-
     .section p {
       font-size: 14px;
       color: #eee;
       line-height: 1.6;
     }
-
     footer {
       margin-top: 30px;
       font-size: 13px;
       color: #ccc;
       text-align: center;
     }
-
     @media (max-width: 768px) {
       .sidebar {
         display: none;
       }
-
       .main {
         margin-left: 0;
         padding: 15px;
       }
-
       .topbar h1 {
         font-size: 18px;
       }
@@ -128,10 +108,11 @@
 <body>
   <div class="sidebar">
     <h2>Finance Point</h2>
-    <a href="#"><i class="fas fa-calendar-alt"></i> Events</a>
-    <a href="#"><i class="fas fa-newspaper"></i> News</a>
-    <a href="#"><i class="fas fa-download"></i> Downloads</a>
-    <a href="#"><i class="fas fa-users"></i> Meet Executives</a>
+    <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
+    <a href="events.html"><i class="fas fa-calendar-alt"></i> Events</a>
+    <a href="news.html"><i class="fas fa-newspaper"></i> News</a>
+    <a href="downloads.html"><i class="fas fa-download"></i> Downloads</a>
+    <a href="executives.html"><i class="fas fa-users"></i> Meet Executives</a>
     <a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
   </div>
 
